# thermoML

./: .gitignore  .travis.yml  README.md  README.rst  finetuning.ipynb  predictions.ipynb  requirements.txt  setup.py
.github/: ISSUE_TEMPLATE.md
New Folder With Items/: AUTHORS.rst  CONTRIBUTING.rst  Makefile  pyproject.toml  tox.ini
New Folder With Items/docs/: Makefile  conf.py  usage.rst
Results/1/Prediction_Results/: ensemble_models_predictions.pkl  mean_pred_df.pkl  predicted_label_test_set.pkl  std_pred_df.pkl  true_label_test.pkl
Results/1/uncertainty_0/: df.pkl  (+2 more)
Results/test_2/: features.pkl
Results/thermoML/: features.pkl
data/: Dataset.xlsx
data/Testing_100_fluids/: df.pickle  df_LASSO_30.pickle  df_viscosity.pickle  df_viscosity_ln.pickle  train_test_indices.pkl
data/app/: app_data.xlsx
data/base_model/: df.xlsx
data/test/: Dataset.xlsx  df_test_bp.pickle  df_viscosity_ln_test_bp.pickle  df_viscosity_ln_test_final.xlsx
data/train/: Dataset.xlsx
demo/: finetuning.ipynb  predictions.ipynb
docs/: index.rst  installation.rst  make.bat
src/: Predictions.ipynb
src/thermoML.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/thermoml/: __init__.py  cli.py
src/utils/: Isothermal_base_model.py  Multitemperature_base_model.py  thermoML.py
tests/: __init__.py  test_thermoml.py
thermoML/: __init__.py
utils/: ANN_Model_Creation.py  Isothermal_base_model.py  Multitemperature_base_model.py  Smiles_and_Feature_Generating.ipynb  Viscosity_classifier.py  base_model.py  data_curator.py  feature_selection.py  hp_tuning.py  thermoML.py
(+565 files in other folders)
