[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thermoml"
version = "0.1.0"
description = "Thermodynamics-informed machine learning to predict temperature-dependent properties of fluids"
readme = "README.rst"
authors = [
  {name = "mahyar rajabi", email = "mahyar.rajabi94@gmail.com"}
]
maintainers = [
  {name = "mahyar rajabi", email = "mahyar.rajabi94@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Mahyar-rajabi94/thermoml/issues"
changelog = "https://github.com/Mahyar-rajabi94/thermoml/blob/master/changelog.md"
homepage = "https://github.com/Mahyar-rajabi94/thermoml"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

